update from formulary to plan-net

--- a/src/main/resources/hapi.properties
+++ b/src/main/resources/hapi.properties
@@ -12,7 +12,7 @@ fhir_version=R4
 # (the web UI similar to the one at http://hapi.fhir.org) will use to
 # connect internally to the FHIR server, so this also needs to be a name
 # accessible from the server itself.
-server_address=https://davinci-drug-formulary-ri.logicahealth.org/formulary/fhir/
+server_address=https://davinci-plan-net-ri.logicahealth.org/fhir/
 
 default_encoding=JSON
 etag_support=ENABLED
@@ -34,7 +34,7 @@ datasource.driver=org.apache.derby.jdbc.EmbeddedDriver
 datasource.url=jdbc:derby:directory:target/jpaserver_derby_files;create=true
 datasource.username=
 datasource.password=
-server.name=Drug Formulary
+server.name=Plan Network
 server.id=home
 test.port=
 hibernate.dialect=ca.uhn.fhir.jpa.util.DerbyTenSevenHapiFhirDialect
