--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,9 @@ target/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Visual Studio Code config files
+.classpath
+.project
+.settings/
+.vscode/
