--- a/Dockerfile(old)
+++ b/Dockerfile(old)
@@ -1,11 +1,13 @@
-FROM jetty:9-jre8-alpine
-USER jetty:jetty
-EXPOSE 8080
 FROM maven:3.6.1-jdk-8 AS build
+COPY pom.xml /usr/src/app/pom.xml
+RUN mvn -f /usr/src/app/pom.xml verify --fail-never
 COPY src /usr/src/app/src
-COPY pom.xml /usr/src/app
 RUN mvn -f /usr/src/app/pom.xml clean package
 
 FROM jetty:9-jre8-alpine
-COPY --from=build /usr/src/app/target/hapi-fhir-jpaserver.war /var/lib/jetty/webapps/hapi-fhir-jpaserver.war
+COPY --from=build /usr/src/app/target/root.war /var/lib/jetty/webapps/root.war
+ADD ./data /var/lib/jetty/target
+USER root
+RUN chown -R jetty:jetty /var/lib/jetty/target
+USER jetty:jetty
 EXPOSE 8080
