Update dockerfile to use jetty

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 
 services:
   plan-net:
@@ -6,4 +6,4 @@ services:
     volumes:
       - ./data:/var/lib/jetty/target
     ports:
-      - '8080:8080'
+      - "8080:8080"
