--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,6 @@ version: "3"
 
 services:
   plan-net:
-    image: plan-net-write:latest
-    volumes:
-      - ./data:/var/lib/jetty/target
+    image: plan_net
     ports:
       - "8080:8080"
