--- a/pom.xml
+++ b/pom.xml
@@ -269,7 +269,7 @@
     <build>
 
         <!-- Tells Maven to name the generated WAR file as hapi-fhir-jpaserver.war -->
-        <finalName>plan-net</finalName>
+        <finalName>root</finalName>
 
         <plugins>
             <!-- The following is not required for the application to build, but allows you to test it by issuing "mvn jetty:run" from the command line. -->
@@ -279,7 +279,7 @@
                 <version>9.4.8.v20180619</version>
                 <configuration>
                     <webApp>
-                        <contextPath>/plan-net</contextPath>
+                        <!-- <contextPath>/plan-net</contextPath> -->
                         <allowDuplicateFragmentNames>true</allowDuplicateFragmentNames>
                     </webApp>
                 </configuration>
