--- a/pom.xml
+++ b/pom.xml
@@ -357,6 +357,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <version>${spring_boot_version}</version>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 
     <build>
