--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -80,6 +80,7 @@ spring:
 hapi:
   fhir:
     initialdata:
+      - artifacts
       - test-data
       - plan-net-data
     ### This flag when enabled to true, will avail evaluate measure operations from CR Module.
